# otus-cpp-course-advanced

./: CMakeLists.txt  README.md  main.cpp  version_counter.cpp
.github/workflows/: release.yml
